# aoc_2024

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs
src/day2/: mod.rs
src/day24/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
src/graph/: mod.rs
src/table/: mod.rs
templates/: mod.rs
