[package]
name = "aoc_24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bimap = "0.6.3"
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
itertools = "0.13.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["netlib-system"] }
nom = "7.1.3"
petgraph = "0.6.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
rstest = "0.23.0"
strum_macros = "0.26.4"
vek = "0.17.1"
